--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portofolio Tailwind CSS</title>
+    <title>Ivan Dharmadi</title>
     <link href="dist/output.css" rel="stylesheet">
 </head>
 <body>
