--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="max-w-xl mx-auto text-center mb-16">
                     <h4 class="font-semibold text-lg text-primary mb-2">PORTFOLIO</h4>
                     <h2 class="font-bold text-dark text-3xl mb-4 sm:text-4xl lg:text-5xl">Project Terbaru</h2>
-                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis fugit ipsum quo tempore ratione rem dolore earum assumenda, est blanditiis.</p>
+                    <p class="font-medium text-md text-secondary md:text-lg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat veritatis ducimus sequi explicabo cum! Possimus, qui excepturi!</p>
                 </div>
             </div>
 
@@ -291,29 +291,29 @@
                 </div>
             </div>
 
-            <form>
             <div class="w-full lg:w-2/3 lg:mx-auto">
+            <form action="https://formsubmit.co/cef45a69781e595c9976b6b952c52d05" method="POST">
                 <div class="w-full px-4 mb-8">
                     <label for="name" class="text-base text-primary font-bold">Nama</label>
-                    <input type="text" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                    <input type="text" name="name" id="name" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                 </div>
                 <div class="w-full px-4 mb-8">
                     <label for="email" class="text-base text-primary font-bold">Email</label>
-                    <input type="text" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                    <input type="text" name="email" id="email" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                 </div>
                 <div class="w-full px-4 mb-8">
                     <label for="telepon" class="text-base text-primary font-bold">Telepon</label>
-                    <input type="text" id="telepon" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
+                    <input type="text" name="telepon" id="telepon" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary">
                 </div>
                 <div class="w-full px-4 mb-8">
                     <label for="pesan" class="text-base text-primary font-bold">Pesan</label>
-                    <textarea type="text" id="pesan" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-40"></textarea>
+                    <textarea type="text" name="pesan" id="pesan" class="w-full bg-slate-200 text-dark p-3 rounded-md focus:outline-none focus:ring-primary focus:ring-1 focus:border-primary h-40"></textarea>
                 </div>
                 <div class="w-full px-4">
                     <button class="text-base font-semibold text-white bg-primary py-3 px-8 rounded-full w-full hover:opacity-80 hover:shadow-lg transition duration-500">Kirim</button>
                 </div>
-            </div>
             </form>
+            </div>
         </div>
     </section>
     <!-- Contact Section End -->
